syntax="proto3";

package auth;

import "google/protobuf/empty.proto";
import "entity.proto";

service AuthService {
  rpc RequestSmsCode(RequestSmsCodeRequest) returns (RequestSmsCodeResponse);
  rpc LoginClient(LoginClientRequest) returns (LoginResponse);
  rpc LoginCourier(LoginCourierRequest) returns (LoginResponse);
  rpc UpdateAccessToken(google.protobuf.Empty) returns (UpdateAccessTokenResponse);
  rpc LogoutClient(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc LogoutCourier(google.protobuf.Empty) returns (google.protobuf.Empty);
}

//request--------------------------------------

message RequestSmsCodeRequest {
  string phone = 1;
}

message LoginClientRequest {
  string phone = 1;
  string code = 2;
  optional bool is_registered = 3;
}

message LoginCourierRequest {
  string phone = 1;
  string code = 2;
}

message RegisterRequest {
}


//responses--------------------------------------

message RequestSmsCodeResponse {
  bool is_registered = 1;
  entity.UserTypes user_type = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message RegisterResponse {
}

message UpdateAccessTokenResponse {
}